fix video_qa on mobile

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -135,6 +135,21 @@ button.navbar-toggler {
     padding-right: 10px;
 }
 
+.scroll_list {
+    width: 300px;
+    height: 150px;
+    overflow: hidden;
+    overflow-y: scroll;
+    border: 1px solid black;
+    border-radius: 7px;
+    padding: 10px;
+    background-color: white;
+}
+
+.scroll_list a {
+    color: black;
+}
+
 .mwmax {
     min-width: max-content;
 }
